Updating and modifying data in Django

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -17,7 +17,13 @@
         <td>{{ item.name }}</td>
         {% endif %}
         <td>
+          <a href="/toggle/{{ item.id }}"> Toggle </a>
+        </td>
+        <td>
           <a href="/edit/{{ item.id }}"> Edit </a>
+        </td>
+        <td>
+          <a href="/delete/{{ item.id }}"> Delete </a>
         </td>
       </tr>
       {% empty %}
